# auto-applier-tool

./: .gitignore  README.md  browser_automation.py  main.py  requirements.txt  resume_matching.py  utils.py
app/: README.md
app/backend/: pyproject.toml
app/backend/auto_applier_api/: __init__.py  main.py  settings.py
app/backend/auto_applier_api/api/: applications.py  jobs.py  profiles.py  runs.py  settings.py  ws.py
app/backend/auto_applier_api/core/: ats_adapter.py
app/backend/auto_applier_api/db/: models.py  repo.py  schema.py
app/backend/auto_applier_api/db/migrations/versions/: 001_initial.py
app/backend/auto_applier_api/services/: jobs.py  profiles.py
app/frontend/: index.html  package.json  tailwind.config.ts
app/frontend/src/: App.tsx  index.css
app/scripts/: dev.sh
app/tauri/: Cargo.toml  tauri.conf.json
app/tauri/src/: main.rs  sidecar.rs
ats_handlers/: __init__.py  base.py  greenhouse.py  lever.py
data/: applications.csv  jobs.csv
tests/: test_ats_handlers.py  test_browser_automation.py  test_resume_matching.py  test_utils.py
